@@ -15,7 +15,6 @@ import java.time.Instant;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -147,7 +146,7 @@ public class BundleTest {
 
         folder3.getDocuments().add(folder3document1);
 
-        List<BundleDocument> result = bundle.getSortedDocuments().collect(Collectors.toList());
+        List<BundleDocument> result = bundle.getSortedDocuments().toList();
         List<BundleDocument> expected = Stream.of(
             document1,
             folder1document1,
